--- a/kubernetes/apps/k8s/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/k8s/media/immich/app/server/helmrelease.yaml
@@ -59,7 +59,11 @@ spec:
               tag: v1.82.1
               imagePullPolicy: IfNotPresent
             args: ["start-server.sh"]
-            envFrom: *envFrom
+            envFrom:
+              - configMapRef:
+                  name: *configMap
+              - secretRef:
+                  name: *secret
             resources:
               requests:
                 cpu: 100m
