--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -87,6 +87,8 @@ spec:
         ports:
           http:
             port: *port
+          websocket:
+            port: 3000
     ingress:
       main:
         enabled: true
