--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -109,6 +109,7 @@ spec:
         type: hostPath
         hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0030b5ff1aa4eb11a16526259da30875-if00-port0
         hostPathType: CharDevice
+        defaultMode: 511
         globalMounts:
           - path: /dev/ttyUSB0
             readOnly: true
