--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -32,10 +32,10 @@ spec:
       namespace: volsync
   values:
     defaultPodOptions:
-      securityContext:
-        privileged: true
       nodeSelector:
         feature.node.kubernetes.io/skyconnect: "true"
+    securityContext:
+      privileged: true
     controllers:
       main:
         annotations:
@@ -109,6 +109,6 @@ spec:
         type: hostPath
         hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0030b5ff1aa4eb11a16526259da30875-if00-port0
         hostPathType: CharDevice
-        defaultMode: 511
         globalMounts:
           - path: /dev/ttyUSB0
+            readOnly: true
