--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -50,6 +50,9 @@ spec:
               imagePullPolicy: IfNotPresent
             env:
               TZ: America/New_York
+            pod:
+              securityContext:
+                privileged: true
             probes:
               liveness: &probes
                 enabled: false
