--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.0.3
+      version: 1.5.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -31,87 +31,59 @@ spec:
     - name: volsync
       namespace: volsync
   values:
-    defaultPodOptions:
-      nodeSelector:
-        feature.node.kubernetes.io/skyconnect: "true"
-      securityContext:
-        privileged: "true"
-    controllers:
-      main:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        type: statefulset
-        strategy: RollingUpdate
-        containers:
-          main:
-            image:
-              repository: ghcr.io/zwave-js/zwave-js-ui
-              tag: 9.2.3
-              imagePullPolicy: IfNotPresent
-            env:
-              TZ: America/New_York
-            pod:
-              securityContext:
-                privileged: true
-            probes:
-              liveness: &probes
-                enabled: false
-                custom: true
-                spec:
-                  httpGet:
-                    path: /health
-                    port: &port 8091
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
-              startup:
-                enabled: false
-            resources:
-              requests:
-                cpu: 10m
-                memory: 100Mi
-              limits:
-                memory: 500Mi
-        statefulset:
-          volumeClaimTemplates:
-            - name: config
-              globalMounts:
-                - path: /usr/src/app/store
-              accessMode: ReadWriteOnce
-              size: 1Gi
-              storageClass: ceph-block
+    controller:
+      type: statefulset
+    image:
+      repository: ghcr.io/zwave-js/zwave-js-ui
+      tag: 9.2.3
+    env:
+      TZ: America/New_York
     service:
       main:
         ports:
           http:
-            port: *port
+            port: &port 8091
           websocket:
+            enabled: true
             port: 3000
+    probes:
+      liveness: &probes
+        enabled: true
+        custom: true
+        spec:
+          httpGet:
+            path: /health
+            port: *port
+          initialDelaySeconds: 0
+          periodSeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 3
+      readiness: *probes
+      startup:
+        enabled: false
     ingress:
       main:
-        enabled: true
-        annotations:
-          nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
-          nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
-        className: nginx
-        hosts:
-          - host: &host zwavejs.${DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  name: main
-                  port: *port
-        tls:
-          - hosts:
-              - *host
+        enabled: false
+    securityContext:
+      privileged: true
+    volumeClaimTemplates:
+      - name: config
+        mountPath: /usr/src/app/store
+        accessMode: ReadWriteOnce
+        size: 1Gi
+        storageClass: ceph-block
     persistence:
       usb:
+        enabled: true
         type: hostPath
         hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0030b5ff1aa4eb11a16526259da30875-if00-port0
+        mountPath: /dev/ttyUSB0
         hostPathType: CharDevice
-        globalMounts:
-          - path: /dev/ttyUSB0
-            readOnly: true
+    nodeSelector:
+      feature.node.kubernetes.io/skyconnect: "true"
+    resources:
+      requests:
+        cpu: 10m
+        memory: 100Mi
+      limits:
+        memory: 500Mi
