--- a/kubernetes/apps/k8s/media/immich/app/web/helmrelease.yaml
+++ b/kubernetes/apps/k8s/media/immich/app/web/helmrelease.yaml
@@ -111,4 +111,4 @@ spec:
         existingClaim: immich-nfs
         globalMounts:
           - path: /usr/src/app/upload
-            subPath: Immich
+            #subPath: Immich
