--- a/kubernetes/apps/k8s/media/immich/app/machine-learning/helmrelease.yaml
+++ b/kubernetes/apps/k8s/media/immich/app/machine-learning/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
         existingClaim: immich-nfs
         globalMounts:
           - path: /usr/src/app/upload
-            subPath: Immich
+            #subPath: Immich
       cache:
         type: emptyDir
       geocoding-dump:
