--- a/kubernetes/apps/k8s/home-automation/home-assistant/database/cluster.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/database/cluster.yaml
@@ -24,6 +24,7 @@ spec:
   storage:
     size: 5Gi
     storageClass: local-path
+  enableSuperuserAccess: true
   superuserSecret:
     name: home-assistant-database-superuser
   postgresql:
