--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -31,10 +31,11 @@ spec:
   values:
     defaultPodOptions:
       securityContext:
-        runAsUser: 568
-        runAsGroup: 568
-        fsGroup: 568
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
         fsGroupChangePolicy: "OnRootMismatch"
+        privileged: true
       nodeSelector:
         feature.node.kubernetes.io/skyconnect: "true"
     controllers:
@@ -45,18 +46,15 @@ spec:
         strategy: RollingUpdate
         containers:
           main:
-            image:
-              repository: ghcr.io/onedr0p/home-assistant
-              tag: 2023.10.4@sha256:369c6f43a75c68333d694297f899803829ecdadb7a6aa16be3452897a556b3cd
+              image:
+                repository: ghcr.io/home-assistant/home-assistant
+                tag: 2023.10.4
               imagePullPolicy: IfNotPresent
             env:
               TZ: America/New_York
             envFrom:
               - secretRef:
                   name: home-assistant-secret
-            pod:
-              securityContext:
-                privileged: true
             lifecycle:
               postStart:
                 exec:
