--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -30,15 +30,21 @@ spec:
       namespace: volsync
   values:
     defaultPodOptions:
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
+        fsGroupChangePolicy: "OnRootMismatch"
+        privileged: true
       nodeSelector:
         feature.node.kubernetes.io/skyconnect: "true"
     controllers:
       main:
-        annotations:
-          reloader.stakater.com/auto: "true"
         pod:
           securityContext:
             privileged: true
+        annotations:
+          reloader.stakater.com/auto: "true"
         type: statefulset
         strategy: RollingUpdate
         containers:
