flip tidbyt-proxy to 2.0.3

--- a/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.0.3
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -26,32 +26,47 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    image:
-      repository: "dmcavinue/tidbyt-proxy"
-      tag: v0.0.3
-      pullPolicy: IfNotPresent
-    controller:
-      replicas: 1
-    nameOverride: tidbyt-proxy
-    envFrom:
-      - secretRef:
-          name: tidbyt-proxy
+    defaultPodOptions:
+      securityContext:
+        fsGroup: 1001
+        runAsUser: 1001
+        runAsGroup: 1001
+    controllers:
+      main:
+        containers:
+          main:
+            securityContext:
+              fsGroup: 1001
+              runAsUser: 1001
+              runAsGroup: 1001
+              capabilities:
+                drop:
+                  - ALL
+              runAsNonRoot: true
+              readOnlyRootFilesystem: true
+              allowPrivilegeEscalation: false
+              seccompProfile:
+                type: RuntimeDefault
+            resources:
+              limits:
+                memory: 128Mi
+              requests:
+                cpu: 500m
+                memory: 64Mi
+            image:
+              repository: "dmcavinue/tidbyt-proxy"
+              tag: v0.0.3
+            envFrom:
+              - secretRef:
+                  name: tidbyt-proxy
     service:
       main:
-        nameOverride: tidbyt-proxy
         ports:
           http:
             port: 8080
+    ingress:
+      main:
+        enabled: false
     serviceAccount:
       create: true
       name: tidbyt-proxy
-    resources:
-      limits:
-        memory: 128Mi
-      requests:
-        cpu: 500m
-        memory: 64Mi
-    securityContext:
-      allowPrivilegeEscalation: false
-      runAsUser: 1001
-      runAsGroup: 1001
