--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
                 drop:
                   - ALL
               runAsNonRoot: true
-              readOnlyRootFilesystem: true
+              readOnlyRootFilesystem: false
               allowPrivilegeEscalation: false
               seccompProfile:
                 type: RuntimeDefault
